# MATTER

./: .doxyfile  .gitattributes  .gitignore  .tokeignore  BUILD_ALL.sh  CMakeLists.txt  LICENSE  README.md  build_docs.sh
.github/: CODEOWNERS
.github/workflows/: build_windows.yml  publish-docs.yml
EDITOR/: README.md
EDITOR/resources/interface/gizmos/: AxisGizmo.mtl
EDITOR/resources/interface/themes/: Default.xml  Night.xml  Tokyo.xml
EDITOR/resources/shaders/: Phong.shader  README.md  Unlit.shader
EDITOR/resources/shaders/compute/: Test.comp
EDITOR/resources/shaders/editor/: Gizmo.shader  Grid.shader  Splash.shader
EDITOR/resources/templates/: ComponentBase.cs.txt  VFShaderBase.shader.txt
HUB/: CMakeLists.txt  README.md
HUB/include/: Hub.hpp  HubUI.hpp
HUB/matter-hub/: build.sh  package.json
HUB/matter-hub/src/: Interfaces.ts  index.css  index.tsx
HUB/matter-hub/src-tauri/: Cargo.toml  tauri.conf.json
HUB/matter-hub/src-tauri/src/: main.rs
HUB/matter-hub/src/components/: ContextMenu.tsx  MessageBox.tsx  Sidebar.tsx  Titlebar.tsx
HUB/matter-hub/src/views/: Documentation.tsx  Installs.tsx  NewProject.tsx  Projects.tsx  Settings.tsx  index.ts
HUB/src/: Hub.cpp  main.cpp
MANAGED/: BuildAll.sh
MANAGED/MatterEngine/: AssemblyInfo.cs  MatterEngine.csproj  Solid.cs
MANAGED/MatterEngine/Properties/: AssemblyInfo.cs
RUNTIME/: CMakeLists.txt
RUNTIME/include/MatterRT/: Core.hpp  Matter.hpp
RUNTIME/src/: Core.cpp
SOLID/: CMakeLists.txt  README.md  appres.rc
SOLID/include/: SolidCamera.hpp  SolidColor.hpp  SolidComponent.hpp  SolidEditor.hpp  SolidEditorConfig.hpp  SolidEditorGrid.hpp  SolidGameObject.hpp  SolidGizmos.hpp  SolidIO.hpp  SolidLight.hpp  SolidLogger.hpp  SolidMaterial.hpp  SolidMeshRenderer.hpp  SolidModel.hpp  SolidPrimitive.hpp  SolidProfiler.hpp  SolidProject.hpp  SolidScene.hpp  SolidSceneCamera.hpp  SolidShader.hpp  SolidTransform.hpp  SolidUI.hpp  SolidUIComponents.hpp  SolidUIWindows.hpp  SolidUtils.hpp
SOLID/include/Shaders/: Unlit.glsl
SOLID/include/WIN32/: Dialogs.hpp
SOLID/include/Windows/: Dialogs.hpp  SplashScreen.hpp
SOLID/src/: SolidColor.cpp  SolidEditor.cpp  SolidEditorConfig.cpp  SolidEditorGrid.cpp  SolidGameObject.cpp  SolidIO.cpp  SolidLogger.cpp  SolidMaterial.cpp  SolidMeshRenderer.cpp  SolidModel.cpp  SolidProfiler.cpp  SolidProject.cpp  SolidScene.cpp  SolidShader.cpp  SolidTransform.cpp  main.cpp
SOLID/src/WIN32/: Dialogs.cpp
SOLID/src/Windows/: Dialogs.cpp  SplashScreen.cpp
docs/html/: _assembly_info_8cs.html  _assembly_info_8cs_source.html  _c_make_c_compiler_id_8c.html  _c_make_c_x_x_compiler_id_8cpp.html  _dialogs_8cpp.html  _dialogs_8cpp_source.html  _dialogs_8hpp.html  _dialogs_8hpp.js  _dialogs_8hpp_source.html  _l_i_q_u_i_d_2_r_e_a_d_m_e_8md.html  _p_l_a_s_m_a_2_r_e_a_d_m_e_8md.html  _r_e_a_d_m_e_8md.html  _r_u_n_t_i_m_e_2_r_e_a_d_m_e_8md.html  _s_o_l_i_d_2_r_e_a_d_m_e_8md.html  _solid_8cs.html  _solid_8cs.js  _solid_8cs_source.html  _solid_camera_8hpp.html  _solid_camera_8hpp.js  _solid_camera_8hpp_source.html  _solid_color-example.html  _solid_color_8cpp.html  _solid_color_8cpp_source.html  _solid_color_8hpp.html  _solid_color_8hpp.js  _solid_color_8hpp_source.html  _solid_component_8hpp.html  _solid_component_8hpp.js  _solid_component_8hpp_source.html  _solid_editor_8cpp.html  _solid_editor_8cpp.js  _solid_editor_8cpp_source.html  _solid_editor_8hpp.html  _solid_editor_8hpp.js  _solid_editor_8hpp_source.html  _solid_editor_config_8cpp.html  _solid_editor_config_8cpp_source.html  _solid_editor_config_8hpp.html  _solid_editor_config_8hpp.js  _solid_editor_config_8hpp_source.html  (+364 more)
docs/html/d0/d2a/: _solid_shader_8hpp.html  _solid_shader_8hpp.js  _solid_shader_8hpp_source.html
docs/html/d0/d33/: struct_editor_preferences.html  struct_editor_preferences.js
docs/html/d0/d3c/: _solid_game_object_8hpp.html  _solid_game_object_8hpp.js  _solid_game_object_8hpp_source.html
docs/html/d0/d6d/: class_solid_editor_grid.html  class_solid_editor_grid.js
docs/html/d0/da5/: class_solid_editor-members.html
docs/html/d0/da8/: namespace_solid_utils.html
docs/html/d0/daf/: struct_axis_mapping.html  struct_axis_mapping.js
docs/html/d0/db4/: namespace_solid_u_i_1_1_im_g_u_i_windows.html
docs/html/d0/db6/: _solid_project_8hpp.html  _solid_project_8hpp.js  _solid_project_8hpp_source.html
docs/html/d0/de9/: md__p_l_a_s_m_a__r_e_a_d_m_e.html
docs/html/d1/d39/: class_solid_game_object.html
docs/html/d1/d3a/: _c_make_c_compiler_id_8c.html  _c_make_c_compiler_id_8c.js
docs/html/d1/d65/: struct_action_mapping-members.html
docs/html/d1/da0/: _solid_editor_grid_8hpp.html  _solid_editor_grid_8hpp.js  _solid_editor_grid_8hpp_source.html
docs/html/d1/db1/: _solid_editor_grid_8cpp.html
docs/html/d1/de7/: build_2_s_o_l_i_d_2_release_2resources_2shaders_2_r_e_a_d_m_e_8md.html
docs/html/d2/d03/: _solid_logger_8hpp.html  _solid_logger_8hpp.js  _solid_logger_8hpp_source.html
docs/html/d2/d24/: struct_log_entry.html  (+1 more)
docs/html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_15.js  all_16.js  all_17.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  classes_7.js  classes_8.js  classes_9.js  classes_a.js  defines_0.js  defines_1.js  defines_2.js  defines_3.js  defines_4.js  defines_6.js  defines_7.js  (+63 more)
scripts/: create_installer.nsi  solid.json
(+100 files in other folders)
